--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                     <h3 class="sub-titulo">Minhas Redes</h3>
 
                     <ul class="redes-sociais">
-                        <li>
-                            <a class="curriculo" href="">Currículo (TBA)</a>
+                       <li>
+                            <a class="instagram" href="https://www.instagram.com/astharof/">Instagram</a>
                         </li>
 
                         <li>
